added password swagger documentation
