# docs/swagger.yaml
@@ -23,6 +23,31 @@ definitions:
       userID:
         type: integer
     type: object
+  dto.PasswordRequest:
+    properties:
+      login:
+        maxLength: 100
+        type: string
+      password:
+        maxLength: 100
+        minLength: 1
+        type: string
+      service:
+        maxLength: 100
+        minLength: 1
+        type: string
+    type: object
+  dto.PasswordResponse:
+    properties:
+      login:
+        type: string
+      password:
+        type: string
+      password_id:
+        type: integer
+      service:
+        type: string
+    type: object
   dto.UpdateUserRequest:
     properties:
       new_password:
@@ -105,6 +130,184 @@ paths:
       summary: Register a new user
       tags:
       - Authentication
+  /passwords/:
+    delete:
+      description: delete user's password by user id from context and password ID
+        from URL (an active session is required).
+      parameters:
+      - description: password ID
+        in: path
+        name: passwordID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - SessionCookie: []
+      summary: Delete password
+      tags:
+      - Passwords
+    get:
+      description: Get all user's passwords by user ID form context (an active session
+        is required).
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.PasswordResponse'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - SessionCookie: []
+      summary: Get passwords
+      tags:
+      - Passwords
+    post:
+      consumes:
+      - application/json
+      description: Save user's password (an active session is required).
+      parameters:
+      - description: Password data
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dto.PasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - SessionCookie: []
+      summary: Save password
+      tags:
+      - Passwords
+    put:
+      consumes:
+      - application/json
+      description: Update passwords's data by user ID from context and password ID
+        from URL (an active session is required).
+      parameters:
+      - description: password ID
+        in: path
+        name: passwordID
+        required: true
+        type: string
+      - description: New password data
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dto.PasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - SessionCookie: []
+      summary: Update password's data
+      tags:
+      - Passwords
+  /passwords/{passwordID}:
+    get:
+      description: Get user's passwords by user ID form context and passwordID from
+        URL (an active session is required).
+      parameters:
+      - description: password ID
+        in: path
+        name: passwordID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.PasswordResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - SessionCookie: []
+      summary: Get password by ID
+      tags:
+      - Passwords
+  /passwords/gen:
+    get:
+      description: Generate a new password based on the specified parameters (length,
+        using special symbols)
+      parameters:
+      - description: Password length (5-100)
+        in: query
+        name: len
+        required: true
+        type: string
+      - description: Using special symbols (true or false)
+        in: query
+        name: special
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - SessionCookie: []
+      summary: Generate password
+      tags:
+      - Passwords
   /profile/:
     delete:
       description: delete user's info by user id from context (an active session is
